# ptp_client

./: .gitignore  pyproject.toml
.cursor/rules/: 1588-acr-agent-persona.mdc
config/: ntp-client.json  ntp-client.schema.json
docs/: 需求设计说明书.md
scripts/: configure-ntp-client.ps1  start-ntp-client.ps1  start-ntp-web.ps1
scripts/wsl/: COMMANDS.txt  ptp4l-unicast-client.conf
src/ptp_client/: __init__.py
src/ptp_client/ntp/: __init__.py  __main__.py  cli.py  cli_args.py  client.py  packet.py  pcap.py  request_builder.py  serde.py
src/ptp_client/ptp/: __init__.py  __main__.py  cli.py  client.py  constants.py  g82752_unicast.py  header.py  packet.py  pcap.py  request_builder.py  serde.py  signaling.py  timestamp.py
src/ptp_client/web/: __init__.py  __main__.py  app.py
src/ptp_client/web/static/: app.js  index.html  styles.css
tests/: test_g82752_signaling.py  test_ntp_packet.py  test_pcap.py  test_ptp_packet.py
